syntax = "proto3";
option csharp_namespace = "OzonEdu.MerchApi.Grpc";
package MerchApi;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";


service MerchApiGrpc
{
	rpc CheckWasIssuedMerch (CheckWasIssuedMerchRequest) returns (CheckWasIssuedMerchResponse);
	rpc IssueMerch (IssueMerchRequest) returns (IssueMerchResponse);
}


message CheckWasIssuedMerchRequest {
string employee_email = 1;
}

message CheckWasIssuedMerchResponse {
string employee_email = 1;
bool was_issued = 2;
}

message IssueMerchRequest {
string employee_email = 1;
}

message IssueMerchResponse {
string employee_email = 1;
}